tags jquery try1

--- a/docs/include/GitHubPagesWikiFooter.html
+++ b/docs/include/GitHubPagesWikiFooter.html
@@ -16,6 +16,48 @@
     </div>
 
     <div class="footer-fragment app-insights-footer-fragment" id="footer-fragment-668884184">
-
+        <div id="tags"></div>
     </div>
+
+    <script>
+        $(document).ready(function () {
+            var fileName = document.location.href.match(/[^\/]+$/)[0];
+            var fileInfo = "/info/" + fileName.replace(".html", ".json");
+            console.log(fileInfo);
+
+            $.getJSON(fileInfo, function (data) {
+
+                console.log(data);
+                alert("got - " + data);
+
+                //var info = JSON.parse(data);
+
+                var keyPhrases = [];
+                $.each(data.KeyPhrases, function (val) {
+                    keyPhrases.push("<a href='/index/" + val + ".json'>" + val + "</a>");
+                });
+
+                var netities = [];
+                var list = JSON.parse(data.NetitiesJson); 
+
+                console.log(list);
+                alert("netities - " + list.length);
+                
+                $.each(list, function (key, val) {
+                    netities.push("<a href='/index/" + val + "'>" + key + "</a>");
+                });
+
+                $("<ul/>", {
+                    "class": "tag-list",
+                    html: keyPhrases.join("")
+                }).appendTo("body");
+
+                $("<ul/>", {
+                    "class": "tag-list",
+                    html: netities.join("")
+                }).appendTo("body");
+                //}).appendTo("#tags");
+            });
+        });
+    </script>
 </div>
