--- a/docs/include/GitHubPagesWikiFooter.html
+++ b/docs/include/GitHubPagesWikiFooter.html
@@ -22,11 +22,15 @@
     <script>
         $(document).ready(function () {
             var fileName = document.location.href.match(/[^\/]+$/)[0];
-            var fileInfo = "/info/" + fileName.replace(".html", ".json");
+            console.log(fileName);
+            alert("got - " + fileName);
+
+            //var fileInfo = "/info/" + fileName.replace(".html", ".json");
+            var fileInfo = "https://raw.githubusercontent.com/technet2/Wiki/master/docs/info/" + fileName;
             console.log(fileInfo);
+            alert("aka - " + fileInfo);
 
             $.getJSON(fileInfo, function (data) {
-
                 console.log(data);
                 alert("got - " + data);
 
