--- a/docs/include/GitHubPagesWikiFooter.html
+++ b/docs/include/GitHubPagesWikiFooter.html
@@ -25,14 +25,14 @@
             console.log(fileName);
             alert("got - " + fileName);
 
-            //var fileInfo = "/info/" + fileName.replace(".html", ".json");
+            var fileName = fileName.replace(".html", ".json");
             var fileInfo = "https://raw.githubusercontent.com/technet2/Wiki/master/docs/info/" + fileName;
-            console.log(fileInfo);
+            console.log("aka - " + fileInfo);
             alert("aka - " + fileInfo);
 
             $.getJSON(fileInfo, function (data) {
                 console.log(data);
-                alert("got - " + data);
+                alert("yey - " + data);
 
                 //var info = JSON.parse(data);
 
