--- a/docs/include/GitHubPagesWikiFooter.html
+++ b/docs/include/GitHubPagesWikiFooter.html
@@ -38,7 +38,7 @@
 
                 var keyPhrases = [];
                 $.each(data.KeyPhrases, function (val) {
-                    keyPhrases.push("<a href='/index/" + val + ".json'>" + val + "</a>");
+                    keyPhrases.push("<a href='/index/" + key + ".json'>" + key + "</a>&nbsp;|&nbsp;");
                 });
 
                 var netities = [];
@@ -48,7 +48,7 @@
                 alert("netities - " + list.length);
                 
                 $.each(list, function (key, val) {
-                    netities.push("<a href='/index/" + val + "'>" + key + "</a>");
+                    netities.push("<a href='/index/" + key.wikipediaUrl + "'>" + key.name + "</a>");
                 });
 
                 $("<ul/>", {
