--- a/docs/include/GitHubPagesWikiFooter.html
+++ b/docs/include/GitHubPagesWikiFooter.html
@@ -37,7 +37,7 @@
                 //var info = JSON.parse(data);
 
                 var keyPhrases = [];
-                $.each(data.KeyPhrases, function (val) {
+                $.each(data.KeyPhrases, function (key) {
                     keyPhrases.push("<a href='/index/" + key + ".json'>" + key + "</a>&nbsp;|&nbsp;");
                 });
 
@@ -47,10 +47,10 @@
                 console.log(list);
                 alert("netities - " + list.length);
                 
-                $.each(list, function (key, val) {
+                $.each(list, function (key) {
                     netities.push("<a href='/index/" + key.wikipediaUrl + "'>" + key.name + "</a>");
                 });
-
+                
                 $("<ul/>", {
                     "class": "tag-list",
                     html: keyPhrases.join("")
