--- a/docs/include/GitHubPagesWikiFooter.html
+++ b/docs/include/GitHubPagesWikiFooter.html
@@ -37,8 +37,8 @@
                 //var info = JSON.parse(data);
 
                 var keyPhrases = [];
-                $.each(data.KeyPhrases, function (key) {
-                    keyPhrases.push("<a href='/index/" + key + ".json'>" + key + "</a>&nbsp;|&nbsp;");
+                $.each(data.KeyPhrases, function (key, val) {
+                    keyPhrases.push("<a href='/index/" + val + ".json'>" + val + "</a>&nbsp;|&nbsp;");
                 });
 
                 var netities = [];
@@ -47,8 +47,8 @@
                 console.log(list);
                 alert("netities - " + list.length);
                 
-                $.each(list, function (key) {
-                    netities.push("<a href='/index/" + key.wikipediaUrl + "'>" + key.name + "</a>");
+                $.each(list, function (key, val) {
+                    netities.push("<a href='/index/" + val.wikipediaUrl + "'>" + val.name + "</a>");
                 });
                 
                 $("<ul/>", {
