--- a/docs/include/GitHubPagesWikiFooter.html
+++ b/docs/include/GitHubPagesWikiFooter.html
@@ -1,3 +1,5 @@
+<div id="tags"></div>
+
 <div class="footer-fragments" role="contentinfo">
     <div class="footer-fragment copyright-info" id="footer-fragment-668884183">
 
@@ -16,25 +18,17 @@
     </div>
 
     <div class="footer-fragment app-insights-footer-fragment" id="footer-fragment-668884184">
-        <div id="tags"></div>
+        
     </div>
 
     <script>
         $(document).ready(function () {
             var fileName = document.location.href.match(/[^\/]+$/)[0];
-            console.log(fileName);
-            alert("got - " + fileName);
+            fileName = fileName.replace(".html", ".json");
 
-            var fileName = fileName.replace(".html", ".json");
             var fileInfo = "https://raw.githubusercontent.com/technet2/Wiki/master/docs/info/" + fileName;
-            console.log("aka - " + fileInfo);
-            alert("aka - " + fileInfo);
 
             $.getJSON(fileInfo, function (data) {
-                console.log(data);
-                alert("yey - " + data);
-
-                //var info = JSON.parse(data);
 
                 var keyPhrases = [];
                 $.each(data.KeyPhrases, function (key, val) {
@@ -44,23 +38,19 @@
                 var netities = [];
                 var list = JSON.parse(data.NetitiesJson); 
 
-                console.log(list);
-                alert("netities - " + list.length);
-                
                 $.each(list, function (key, val) {
-                    netities.push("<a href='/index/" + val.wikipediaUrl + "'>" + val.name + "</a>");
+                    netities.push("<a href='/index/" + val.wikipediaUrl + "'>" + val.name + "</a>&nbsp;|&nbsp;");
                 });
                 
                 $("<ul/>", {
                     "class": "tag-list",
                     html: keyPhrases.join("")
-                }).appendTo("body");
+                }).appendTo("#tags");
 
                 $("<ul/>", {
                     "class": "tag-list",
                     html: netities.join("")
-                }).appendTo("body");
-                //}).appendTo("#tags");
+                }).appendTo("#tags");
             });
         });
     </script>
