change to javascript

--- a/docs/articles/include/GitHubPagesWikiFooter.html
+++ b/docs/articles/include/GitHubPagesWikiFooter.html
@@ -91,13 +91,13 @@
 
         });
 
-        function clickedPhrase(ele) {
-            console.log(ele.innerText);
+        function clickedPhrase(safeName) {
+            //console.log(ele.innerText);
             var popup = $('#tagPopup');
             var tagList = $('#tagList');
             tagList.empty();
 
-            var fileInfo = "https://raw.githubusercontent.com/technet2/Wiki/master/docs/index/" + ele.innerText + ".json";
+            var fileInfo = "https://raw.githubusercontent.com/technet2/Wiki/master/docs/index/" + safeName + ".json";
 
             $.getJSON(fileInfo, function (data) {
                 var nextLinks = [];
