--- a/docs/articles/include/GitHubPagesWikiFooter.html
+++ b/docs/articles/include/GitHubPagesWikiFooter.html
@@ -64,7 +64,7 @@
             $.getJSON(fileInfo, function (data) {
                 var keyPhrases = [];
                 $.each(data.KeyPhrases, function (key, val) {
-                    keyPhrases.push("<span class=\"phr\" onclick='clickedPhrase(" + val.SafeName + ")'>" + val.Name + "</span>&nbsp;|&nbsp;");
+                    keyPhrases.push("<span class=\"phr\" onclick=\"clickedPhrase('" + val.SafeName + "\')\">" + val.Name + "</span>&nbsp;|&nbsp;");
                 });
 
                 var netities = [];
