fixes to popup links

--- a/docs/articles/include/GitHubPagesWikiFooter.html
+++ b/docs/articles/include/GitHubPagesWikiFooter.html
@@ -126,7 +126,7 @@
                 popup.css('top', currentMousePos.y);
 
                 $.each(data.Refs, function (key, val) {
-                    nextLinks.push("<div style='margin-bottom:8px;'><a href='/Wiki/" + val.FileName + "'>" + val.Title + "</a></div>");
+                    nextLinks.push("<div style='margin-bottom:8px;'><a href='/Wiki/articles/" + val.FileName + "'>" + val.Title + "</a></div>");
                 });
                 
                 $("<div/>", {
