tweaks to layout

--- a/docs/articles/include/GitHubPagesWikiHeader.html
+++ b/docs/articles/include/GitHubPagesWikiHeader.html
@@ -130,14 +130,14 @@
             <ul class='navigation-list'>
 
                 <li class='navigation-item selected'>
-                    <a class='internal-link view-wiki-page' href='#'>
+                    <a class='internal-link view-wiki-page'>
                         <span></span>
                         Article
                     </a>
                 </li>
 
                 <li class='navigation-item'>
-                    <a id="myHistory" class='internal-link wiki-page-history' href='#'>
+                    <a id="myHistory" class='internal-link wiki-page-history'>
                         <span></span>
                         History
                     </a>
