--- a/docs/articles/include/GitHubPagesWikiFooter.html
+++ b/docs/articles/include/GitHubPagesWikiFooter.html
@@ -71,8 +71,9 @@
                 $('#editMeCrumb').append($('<a href="' + editVersion + '">' + title + '!!!</a>'));
             }
             
-            $('#myHistory').href = historyVersion;
-            
+           // var a = document.createElement('a');
+          //  $('#myHistory').setAttribute('href', desiredLink);
+
             $.getJSON(fileInfo, function (data) {
                 var keyPhrases = [];
                 $.each(data.KeyPhrases, function (key, val) {
