--- a/docs/articles/include/GitHubPagesWikiHeader.html
+++ b/docs/articles/include/GitHubPagesWikiHeader.html
@@ -117,6 +117,7 @@
     <span class='breadcrumb-item'>
         <span class='separator'><span style='display:none;'></span>&nbsp;&gt;&nbsp;</span>
         <span id="editMeCrumb" class='breadcrumb-item'>
+            <!--<a href='https://github.com/technet2/Wiki/tree/master/docs/#file' class='last'>Edit this page here</a>-->
         </span>
     </span>
 </div>
@@ -129,14 +130,14 @@
             <ul class='navigation-list'>
 
                 <li class='navigation-item selected'>
-                    <a class='internal-link view-wiki-page' href=''>
+                    <a class='internal-link view-wiki-page' href='#'>
                         <span></span>
                         Article
                     </a>
                 </li>
 
                 <li class='navigation-item'>
-                    <a id="myHistory" class='internal-link wiki-page-history' href=''>
+                    <a id="myHistory" class='internal-link wiki-page-history' href='#'>
                         <span></span>
                         History
                     </a>
