added KeyPhrase indexes

--- a/docs/articles/include/DynamicStyle.css
+++ b/docs/articles/include/DynamicStyle.css
@@ -42,3 +42,71 @@ li.field-item.post-feature {display:none}
 
 .MSTToolbarVisible .header-fragment-outer.fiji-header-fragment-outer.site-banner {top: 80px;}
 .MSTToolbarVisible #megabladeContainer {top: 40px;}
+
+.tallyArea {
+    column-count: 5;
+}
+
+.tallyItem {
+    width: 150px;
+    min-height: 60px;
+    background-color: #d8d8d8;
+    text-align: center;
+    vertical-align: central;
+    display: block;
+    float: left;
+    clear: both;
+    margin:10px;
+    cursor:pointer;
+    position:relative;
+}
+
+.tallyTitle {
+    background-color: white;
+    font-size: 12px !important;
+    font-weight: bold;
+    float: left;
+    width: 140px;
+    clear: both;
+    margin: 5px;
+    color: red;
+}
+
+.tallyTally {
+    font-size: 12px;
+    float: left;
+    margin: 5px;
+    position:absolute;
+    bottom:2px;
+    right:2px;
+}
+
+.tallyCount {
+    font-size: 12px;
+    float: left;
+    margin: 5px;
+}
+
+.tallyTitle.a2z {
+    background-color: white;
+    font-size: 30px !important;
+    font-weight: bold;
+    float: left;
+    width: 50px;
+    clear: both;
+    margin: 5px;
+    color: black;
+}
+}
+
+.tallyTally.a2z {
+    font-size: 12px;
+    float: left;
+    margin: 5px;
+}
+
+.tallyCount.a2z {
+    font-size: 12px;
+    float: left;
+    margin: 5px;
+}
