--- a/docs/articles/include/GitHubPagesWikiFooter.html
+++ b/docs/articles/include/GitHubPagesWikiFooter.html
@@ -123,6 +123,17 @@
 
         });
 
+        function goToIndex(file) {
+            file = 'https://github.com/technet2/Wiki/blob/master/docs/index/' + file;
+            console.log(file);
+            window.location.href = file;
+        }
+
+        function goToSubIndex(file) {
+            console.log(file);
+            window.location.href = file;
+        }
+
         function clickedPhrase(safeName) {
             //console.log(ele.innerText);
             var popup = $('#tagPopup');
