imported user pages from TNWiki, plus other fixes

--- a/docs/articles/include/DynamicStyle.css
+++ b/docs/articles/include/DynamicStyle.css
@@ -45,6 +45,8 @@ li.field-item.post-feature {display:none}
 
 .tallyArea {
     column-count: 5;
+    position:relative !important;
+    clear:both !important;
 }
 
 .tallyItem {
@@ -53,12 +55,15 @@ li.field-item.post-feature {display:none}
     background-color: #d8d8d8;
     text-align: center;
     vertical-align: central;
-    display: block;
     float: left;
     clear: both;
-    margin:10px;
-    cursor:pointer;
-    position:relative;
+    margin: 10px;
+    cursor: pointer;
+    position: relative;
+    -webkit-column-break-inside: avoid; /* Chrome, Safari */
+    page-break-inside: avoid; /* Theoretically FF 20+ */
+    break-inside: avoid-column; /* IE 11 */
+    display: table;
 }
 
 .tallyTitle {
@@ -69,7 +74,7 @@ li.field-item.post-feature {display:none}
     width: 140px;
     clear: both;
     margin: 5px;
-    color: red;
+    color: black;
 }
 
 .tallyTally {
@@ -109,4 +114,45 @@ li.field-item.post-feature {display:none}
     font-size: 12px;
     float: left;
     margin: 5px;
+}
+
+/** {
+    box-sizing: border-box;
+}*/
+
+
+@media screen and (max-width: 400px) {
+    .tallyArea {
+        column-count: 1;
+    }
+}
+@media screen and (min-width: 400px) and (max-width: 600px) {
+    .tallyArea {
+        column-count: 2;
+    }
+}
+@media screen and (min-width:600px) and (max-width: 800px) {
+    .tallyArea {
+        column-count: 3;
+    }
+}
+@media screen and (min-width:800px) and (max-width: 1000px) {
+    .tallyArea {
+        column-count: 4;
+    }
+}
+@media screen and (min-width:1000px) and (max-width: 1200px) {
+    .tallyArea {
+        column-count: 5;
+    }
+}
+@media screen and (min-width:1200px) and (max-width: 1400px) {
+    .tallyArea {
+        column-count: 6;
+    }
+}
+@media screen and (min-width:1400px) {
+    .tallyArea {
+        column-count: 8;
+    }
 }
