fixes to history tabs

--- a/docs/articles/include/GitHubPagesWikiFooter.html
+++ b/docs/articles/include/GitHubPagesWikiFooter.html
@@ -71,8 +71,8 @@
                 $('#editMeCrumb').append($('<a href="' + editVersion + '">' + title + '!!!</a>'));
             }
             
-           // var a = document.createElement('a');
-          //  $('#myHistory').setAttribute('href', desiredLink);
+            var url = "https://github.com/technet2/Wiki/commits/master/docs/articles/" + fileName;
+            $('#myHistory').setAttribute('href', url);
 
             $.getJSON(fileInfo, function (data) {
                 var keyPhrases = [];
