--- a/docs/articles/include/GitHubPagesWikiFooter.html
+++ b/docs/articles/include/GitHubPagesWikiFooter.html
@@ -72,7 +72,9 @@
             }
             
             var url = "https://github.com/technet2/Wiki/commits/master/docs/articles/" + fileName;
-            $('#myHistory').setAttribute('href', url);
+            var $tab = document.querySelector('#myHistory');
+            $tab.setAttribute('href', url);
+            //$('#myHistory').setAttribute('href', url);
 
             $.getJSON(fileInfo, function (data) {
                 var keyPhrases = [];
