fixes and gist bits

--- a/docs/articles/include/GitHubPagesWikiFooter.html
+++ b/docs/articles/include/GitHubPagesWikiFooter.html
@@ -121,7 +121,7 @@
                         html: netities.join("")
                     }).appendTo("#tags");
                 }
-            }).error(function () { console.log('No info file found for this page') });
+            }).error(function () { console.log('No info file found for this page'); });
 
         });
 
