--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
 
 <body style='margin:20px !important;'>
 
-    Hello {{user.name}}
+    Hi {{user.name}}
 
     <div class="header-fragments" role="banner">
 
