--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -104,22 +104,31 @@
             var fileInfo = "https://raw.githubusercontent.com/technet2/Wiki/master/docs/index/" + safeName + ".json";
 
             $.getJSON(fileInfo, function (data) {
-                var nextLinks = [];
-
-                popup.css('visibility', 'visible');
-                popup.css('left', currentMousePos.x);
-                popup.css('top', currentMousePos.y);
-
-                $.each(data.Refs, function (key, val) {
-                    nextLinks.push("<div style='margin-bottom:8px;'><a href='/Wiki/articles/" + val.FileName + "'>" + val.Title + "</a></div>");
+                processPhraseLinkPopup(data);
+            }).error(function () {
+                fileInfo = fileInfo.toLowerCase(); // try two
+                $.getJSON(fileInfo, function (data) {
+                    processPhraseLinkPopup(data);
                 });
-
-                $("<div/>", {
-                    "class": "link-list",
-                    html: nextLinks.join("")
-                }).appendTo("#tagList");
             });
 
+        }
+
+        function processPhraseLinkPopup(data) {
+            var nextLinks = [];
+
+            popup.css('visibility', 'visible');
+            popup.css('left', currentMousePos.x);
+            popup.css('top', currentMousePos.y);
+
+            $.each(data.Refs, function (key, val) {
+                nextLinks.push("<div style='margin-bottom:8px;'><a href='/Wiki/articles/" + val.FileName + "'>" + val.Title + "</a></div>");
+            });
+
+            $("<div/>", {
+                "class": "link-list",
+                html: nextLinks.join("")
+            }).appendTo("#tagList");
         }
 
         $(function () {
