--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -64,7 +64,7 @@
                 });
 
                 if (keyPhrases.length > 0) {
-                    $("<h2>Key Phrases Identified</h2>").appendTo("#tags");
+                    $("<h2>Popular Phrases Identified</h2>").appendTo("#tags");
 
                     $("<ul/>", {
                         "class": "tag-list",
@@ -73,7 +73,7 @@
                 }
 
                 if (netities.length > 0) {
-                    $("<h2>Entities on Wikipedia</h2>").appendTo("#tags");
+                    $("<h2>Entities Indentified</h2>").appendTo("#tags");
 
                     $("<ul/>", {
                         "class": "tag-list",
