--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -107,8 +107,14 @@
                 var nextLinks = [];
 
                 popup.css('visibility', 'visible');
-                popup.css('left', currentMousePos.x);
                 popup.css('top', currentMousePos.y);
+                var left = currentMousePos.x;
+                if (document.body.clientWidth) {
+                    if (left + 200 < document.body.clientWidth) {
+                        left = document.body.clientWidth - 200;
+                    }
+                }
+                popup.css('left', left);
 
                 $.each(data.Refs, function (key, val) {
                     nextLinks.push("<div style='margin-bottom:8px;'><a href='/Wiki/articles/" + val.FileName + "'>" + val.Title + "</a></div>");
