--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -113,7 +113,7 @@
                 console.log(document.body.clientWidth);
                 if (document.body.clientWidth) {
                     console.log('too far');
-                    if (left + 200 < document.body.clientWidth) {
+                    if (left + 200 > document.body.clientWidth) {
                         left = document.body.clientWidth - 200;
                         console.log('now '+left);
                     }
