--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -136,7 +136,7 @@
 
         <span class='separator'><span style='display:none;'></span>&nbsp;&gt;&nbsp;</span>
         <span class='breadcrumb-item'>
-            <a href='/Wiki/articles/PageIndex1.html'>TechNet Articles</a>
+            <a href='/Wiki/articles/'>TechNet Articles</a>
         </span>
 
         <span class='breadcrumb-item'>
