--- a/docs/css/DynamicStyle.css
+++ b/docs/css/DynamicStyle.css
@@ -44,7 +44,6 @@ li.field-item.post-feature {display:none}
 .MSTToolbarVisible #megabladeContainer {top: 40px;}
 
 .tallyArea {
-    column-count: 5;
     position:relative !important;
     clear:both !important;
 }
@@ -54,9 +53,8 @@ li.field-item.post-feature {display:none}
     min-height: 60px;
     background-color: #d8d8d8;
     text-align: center;
-    vertical-align: central;
+    vertical-align: top;
     float: left;
-    clear: both;
     margin: 10px;
     cursor: pointer;
     position: relative;
