--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -85,9 +85,11 @@
         });
 
         function goToIndex(file) {
-            file = 'https://github.com/technet2/Wiki/blob/master/docs/index/' + file;
-            console.log(file);
-            window.location.href = file;
+            clickedPhrase(file.replace('.json', ''));
+
+            //file = 'https://github.com/technet2/Wiki/blob/master/docs/index/' + file;
+            //console.log(file);
+            //window.location.href = file;
         }
 
         function goToSubIndex(file) {
