--- a/_includes/header.html
+++ b/_includes/header.html
@@ -131,7 +131,7 @@
     </div>
 
     <div class='breadcrumb-list'>
-        <span class='breadcrumb-item'><a class="internal-link view-home" href="https://github.com/technet2/{{ site.baseurl }}/tree/master/">Wiki</a></span>
+        <span class='breadcrumb-item'><a class="internal-link view-home" href="https://github.com/technet2{{ site.baseurl }}/tree/master/">Wiki</a></span>
 
         <span class='separator'><span style='display:none;'></span>&nbsp;&gt;&nbsp;</span>
         <span class='breadcrumb-item'>
