--- a/_includes/forumninjas_header.html
+++ b/_includes/forumninjas_header.html
@@ -66,7 +66,7 @@
                                             Forum Ninjas
                                         </a>
                                     </h1>
-                                    <p class="site-description ms-blog-description">Official blog of the MSDN and TechNet Forum Ninjas</p>
+                                    <p class="site-description ms-blog-description">Official blog of the MSDN and TechNet Forum Ninjas [Unofficial copy]</p>
                                 </div>
                             </div>
                         </div>
