--- a/_includes/windowsazurestorage_header.html
+++ b/_includes/windowsazurestorage_header.html
@@ -60,10 +60,10 @@
                                 <div id="blog-logo-text">
                                     <h1 class="site-title ms-blog-title">
                                         <a class="for-desktop" href="https://blogs.msdn.microsoft.com/windowsazurestorage">
-                                            Windows Azure Storage
+                                            Windows Azure Storage Blog
                                         </a>
                                         <a class="for-mobile" href="https://blogs.msdn.microsoft.com/windowsazurestorage">
-                                            Windows Azure Storage
+                                            Windows Azure Storage Blog
                                         </a>
                                     </h1>
                                     <p class="site-description ms-blog-description">Official blog of Windows Azure Storage [Unofficial copy]</p>
@@ -84,7 +84,7 @@
 
             <span class='separator'><span style='display:none;'></span>&nbsp;&gt;&nbsp;</span>-->
             <span class='breadcrumb-item'>
-                <a href="{{ site.baseurl }}/blogs/index.html">Forum Ninjas Blog</a>
+                <a href="{{ site.baseurl }}/blogs/index.html">Windows Azure Storage Blog</a>
             </span>
 
             <span class='breadcrumb-item'>
