--- a/_includes/windowsazurestorage_header.html
+++ b/_includes/windowsazurestorage_header.html
@@ -84,7 +84,7 @@
 
             <span class='separator'><span style='display:none;'></span>&nbsp;&gt;&nbsp;</span>-->
             <span class='breadcrumb-item'>
-                <a href="{{ site.baseurl }}/blogs/index.html">Windows Azure Storage Blog</a>
+                <a href="{{ site.baseurl }}/blogs/index.html">Blogs</a>
             </span>
 
             <span class='breadcrumb-item'>
